<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarUsuario">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloActivityActualizarUsuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/ti_actualizar_cedula"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/input_cedula"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/ti_actualizar_nombre"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ti_actualizar_cedula"
        app:layout_constraintStart_toStartOf="@+id/ti_actualizar_cedula"
        app:layout_constraintTop_toBottomOf="@+id/ti_actualizar_cedula" />

    <EditText
        android:id="@+id/ti_actualizar_apellido"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ti_actualizar_nombre"
        app:layout_constraintStart_toStartOf="@+id/ti_actualizar_nombre"
        app:layout_constraintTop_toBottomOf="@+id/ti_actualizar_nombre" />

    <EditText
        android:id="@+id/ti_actualizar_telefono"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_telefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/ti_actualizar_apellido"
        app:layout_constraintStart_toStartOf="@+id/ti_actualizar_apellido"
        app:layout_constraintTop_toBottomOf="@+id/ti_actualizar_apellido" />

    <EditText
        android:id="@+id/ti_actualizar_fechaNacimiento"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_fechaNacimiwnto"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/ti_actualizar_telefono"
        app:layout_constraintStart_toStartOf="@+id/ti_actualizar_telefono"
        app:layout_constraintTop_toBottomOf="@+id/ti_actualizar_telefono" />

    <Button
        android:id="@+id/btn_actualizar_Usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/botonActualizarUsuario"
        app:layout_constraintEnd_toEndOf="@+id/ti_actualizar_fechaNacimiento"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/ti_actualizar_fechaNacimiento"
        app:layout_constraintTop_toBottomOf="@+id/ti_actualizar_fechaNacimiento" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_cedula"
        app:layout_constraintBottom_toTopOf="@+id/ti_actualizar_cedula"
        app:layout_constraintStart_toStartOf="@+id/ti_actualizar_cedula" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_nombre"
        app:layout_constraintBottom_toTopOf="@+id/ti_actualizar_nombre"
        app:layout_constraintStart_toStartOf="@+id/ti_actualizar_nombre" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_apellido"
        app:layout_constraintBottom_toTopOf="@+id/ti_actualizar_apellido"
        app:layout_constraintStart_toStartOf="@+id/ti_actualizar_apellido" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_telefono"
        app:layout_constraintBottom_toTopOf="@+id/ti_actualizar_telefono"
        app:layout_constraintStart_toStartOf="@+id/ti_actualizar_telefono" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_fechaNacimiwnto"
        app:layout_constraintBottom_toTopOf="@+id/ti_actualizar_fechaNacimiento"
        app:layout_constraintStart_toStartOf="@+id/ti_actualizar_fechaNacimiento" />
</androidx.constraintlayout.widget.ConstraintLayout>