<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCasa">

    <fragment
        android:id="@+id/fr_CrearCasaMapa"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="379dp"
        android:layout_height="374dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bnt_BuscarEnMapa"
        tools:context=".MapsFragment" />

    <TextView
        android:id="@+id/tv_tituloCrearCasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloActivityCrearCasa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/ti_numCasa"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_numeroCasa"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tituloCrearCasa" />

    <EditText
        android:id="@+id/ti_direccion"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/input_direccion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ti_numCasa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ti_numCasa"
        app:layout_constraintTop_toBottomOf="@+id/ti_numCasa" />

    <EditText
        android:id="@+id/ti_areaTerreno"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/input_terreno"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/ti_direccion"
        app:layout_constraintTop_toBottomOf="@+id/ti_direccion" />

    <EditText
        android:id="@+id/ti_areaConstruccion"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_construccion"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/ti_areaTerreno"
        app:layout_constraintStart_toStartOf="@+id/ti_areaTerreno"
        app:layout_constraintTop_toBottomOf="@+id/ti_areaTerreno" />

    <EditText
        android:id="@+id/ti_parqueaderos"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_parqueadero"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="@+id/ti_areaConstruccion"
        app:layout_constraintStart_toStartOf="@+id/ti_areaConstruccion"
        app:layout_constraintTop_toBottomOf="@+id/ti_areaConstruccion" />

    <EditText
        android:id="@+id/ti_avaluo"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_avaluo"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/ti_parqueaderos"
        app:layout_constraintStart_toStartOf="@+id/ti_parqueaderos"
        app:layout_constraintTop_toBottomOf="@+id/ti_parqueaderos" />

    <TextView
        android:id="@+id/tv_tieneBodega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/input_bodega"
        app:layout_constraintStart_toStartOf="@+id/ti_avaluo"
        app:layout_constraintTop_toBottomOf="@+id/ti_avaluo" />

    <CheckBox
        android:id="@+id/cb_bodega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tieneBodega"
        app:layout_constraintEnd_toEndOf="@+id/ti_avaluo"
        app:layout_constraintTop_toTopOf="@+id/tv_tieneBodega" />

    <Button
        android:id="@+id/btn_CrearCasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/botonCrear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tieneBodega" />

    <Button
        android:id="@+id/btn_ir_crearDireccionMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ubicacion"
        app:layout_constraintEnd_toEndOf="@+id/ti_direccion"
        app:layout_constraintTop_toBottomOf="@+id/ti_direccion" />

    <Button
        android:id="@+id/btn_guardarUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_CrearCasaMapa"
        app:layout_constraintVertical_bias="0.095" />

    <EditText
        android:id="@+id/ti_latitud_crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Latitud"
        android:inputType="numberSigned|numberDecimal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ti_numCasa" />

    <EditText
        android:id="@+id/ti_longitud_crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Longitud"
        android:inputType="numberSigned|numberDecimal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_latitud_crear" />

    <Button
        android:id="@+id/bnt_BuscarEnMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="Buscar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/ti_longitud_crear"
        app:layout_constraintTop_toBottomOf="@+id/ti_longitud_crear" />

</androidx.constraintlayout.widget.ConstraintLayout>