<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarCasa">

    <fragment
        android:id="@+id/fr_EditarCasaMapa1"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="379dp"
        android:layout_height="439dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bnt_BuscarEnMapaActualizar"
        tools:context=".MapsFragment" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloActivityEditarCasa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_numeroCasa"
        app:layout_constraintBottom_toTopOf="@+id/ti_editar_numCasa"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_numCasa" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/ti_editar_direccionCasa"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_direccionCasa"
        tools:text="@string/input_direccion" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_terreno"
        app:layout_constraintBottom_toTopOf="@+id/ti_editar_areaTerrenoCasa"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_areaTerrenoCasa" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_construccion"
        app:layout_constraintBottom_toTopOf="@+id/ti_editar_areaConstruccionCasa"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_areaConstruccionCasa" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_parqueadero"
        app:layout_constraintBottom_toTopOf="@+id/ti_editar_parqueaderosCasa"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_parqueaderosCasa" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_avaluo"
        app:layout_constraintBottom_toTopOf="@+id/ti_editar_avaluoCasa"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_avaluoCasa" />

    <EditText
        android:id="@+id/ti_editar_numCasa"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_numeroCasa"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/ti_editar_direccionCasa"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/input_direccion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ti_editar_numCasa"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_numCasa"
        app:layout_constraintTop_toBottomOf="@+id/ti_editar_numCasa" />

    <EditText
        android:id="@+id/ti_editar_areaTerrenoCasa"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/input_terreno"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/ti_editar_direccionCasa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_direccionCasa"
        app:layout_constraintTop_toBottomOf="@+id/btn_ir_actualizarDireccionMapa" />

    <EditText
        android:id="@+id/ti_editar_areaConstruccionCasa"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_construccion"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/ti_editar_areaTerrenoCasa"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_areaTerrenoCasa"
        app:layout_constraintTop_toBottomOf="@+id/ti_editar_areaTerrenoCasa" />

    <EditText
        android:id="@+id/ti_editar_parqueaderosCasa"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_parqueadero"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="@+id/ti_editar_areaConstruccionCasa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_areaConstruccionCasa"
        app:layout_constraintTop_toBottomOf="@+id/ti_editar_areaConstruccionCasa" />

    <EditText
        android:id="@+id/ti_editar_avaluoCasa"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/input_avaluo"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/ti_editar_parqueaderosCasa"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_parqueaderosCasa"
        app:layout_constraintTop_toBottomOf="@+id/ti_editar_parqueaderosCasa" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/input_bodega"
        app:layout_constraintStart_toStartOf="@+id/ti_editar_avaluoCasa"
        app:layout_constraintTop_toBottomOf="@+id/ti_editar_avaluoCasa" />

    <CheckBox
        android:id="@+id/cb_editar_bodebaCasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="@+id/ti_editar_avaluoCasa"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

    <Button
        android:id="@+id/btn_editarCasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/botonActualizarUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/btn_guardarActualizarUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_EditarCasaMapa1" />

    <EditText
        android:id="@+id/ti_latitud_actualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="LATITUD"
        android:inputType="numberSigned|numberDecimal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/ti_longitud_actualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="LONGITUD"
        android:inputType="numberSigned|numberDecimal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/ti_latitud_actualizar"
        app:layout_constraintStart_toStartOf="@+id/ti_latitud_actualizar"
        app:layout_constraintTop_toBottomOf="@+id/ti_latitud_actualizar" />

    <Button
        android:id="@+id/bnt_BuscarEnMapaActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Buscar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/ti_longitud_actualizar"
        app:layout_constraintTop_toBottomOf="@+id/ti_longitud_actualizar" />

    <Button
        android:id="@+id/btn_ir_actualizarDireccionMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ubicacion"
        app:layout_constraintEnd_toEndOf="@+id/ti_editar_direccionCasa"
        app:layout_constraintTop_toBottomOf="@+id/ti_editar_direccionCasa" />

</androidx.constraintlayout.widget.ConstraintLayout>